# odp-mppa

./: .gitignore  .gitmodules  Makefile  README  ansi2html.sh  bootstrap  configure.ac  ktest-wrapper.sh  ls_modules.sh
apps/: Makefile.apps
apps/generator/: Makefile  odp_generator.c
apps/generator/firmware/: Makefile  main.c
apps/ipsec/: Makefile.disabled  odp_generator.c  odp_ipsec.c  odp_ipsec_cache.h
apps/ipsec/firmware/: main.c
apps/l2fwd-auto/: Makefile  example_debug.h  odp_generator.c  run.sh
apps/l2fwd-auto/firmware/: main.c
apps/l2fwd-pcie/: run.sh
apps/l2fwd-pcie/firmware/: Makefile  main.c
apps/l2fwd/firmware/: main.c
apps/odp-netdev/: run.sh
apps/odp-netdev/firmware/: main.c
apps/skel/: example.c
apps/skel/firmware/: Makefile  main.c
doc/: Makefile.inc
doc-kalray/: K1-ODP.tex
doc/helper-guide/: Doxyfile
doc/implementers-guide/: Makefile.am
doc/process-guide/: Makefile.am  release-guide.adoc
doc/users-guide/: Makefile.am  users-guide.adoc
example/: Makefile.am  Makefile.inc
example/generator/: odp_generator.c
example/ipsec/: odp_ipsec.c  odp_ipsec_misc.h  odp_ipsec_sa_db.c  odp_ipsec_stream.c
example/traffic_mgmt/: odp_traffic_mgmt.c
firmware/: Makefile
firmware/common/boot/: boot.c  boot.h  include.mk
firmware/common/c2c/: c2c.c  include.mk
firmware/common/eth/: eth.c  ethtools.c  include.mk  mac.c
firmware/common/fp/: fp.c  include.mk
firmware/common/internal/: debug.h
firmware/ioeth/: Makefile  main.c
firmware/ioeth-storage/: Makefile
firmware/iopcie/: Makefile  ioddr-boot.c
firmware/iopcie-jumbo/: ioddr-boot.c
firmware/iounified/: main.c
firmware/iounified-jumbo/: Makefile  main.c
firmware/iounified-nopcie/: Makefile  main.c
firmware/netdev-loopback/: netdev-loopback.c
helper/: Makefile.am
helper/test/: Makefile.am  table.c
long/: .gitignore  Makefile
long/atomic_perf/: Makefile
long/dispatch/: Makefile  dispatch_simple.c
long/include/: test_helper.h
long/ipsec_max/: Makefile  Makefile.ipsec_max  ipsec  odp_ipsec.c  run.sh
long/linux-emulator/: Makefile  main.c
long/pcie_cluster_to_host_multiq_perf/: Makefile  c2h_bw.py  odp_generator.c
long/pcie_cluster_to_host_perf/: Makefile  c2h_bw.py  example_debug.h  odp_generator.c
long/pcie_fwd/: Makefile  run.sh
long/pcie_fwd_jumbo/: Makefile  odp_l2fwd.c  run.sh
long/pcie_fwd_multiq/: Makefile  run.sh
long/pcie_host_to_cluster_perf/: Makefile  h2c_bw.py  pcie_host_to_cluster_perf_multibin.mpk  pktgen_sample01_simple.sh
long/pktio-ddr/: Makefile  odp_pktio_ddr.c
long/pktio_cluster_ping_pong/: Makefile  cluster_ping_pong.c
long/pktio_cluster_sync/: Makefile  cluster.c
long/pktio_dual/: Makefile  cluster.c
long/pktio_perf/: Makefile  regex
long/pktio_perf_loopback/: Makefile  odp_pktio_perf.c
long/pktio_stats/: Makefile  cluster.c
long/ring_com/: Makefile  ring_com.c
mk/: platforms.inc  rules.inc
mppaeth/: mppa_pcie_netdev.c
mppapcie_odp/: Makefile  mppapcie_odp.h  odp.c  odp.h  odp_ethtool.c  odp_rx.c  odp_tx.c
perf/: run_single  run_single.py  testperf.py
perf/atomic_perf/: regex
pkgconfig/: libodp-mppa.pc.in  libodphelper-mppa.pc.in
platform/: Makefile.inc
platform/linux-generic/: Makefile.am  odp_classification.c
platform/mppa/: Makefile.am  odp_atomic.c  odp_buffer.c  odp_buffer_ring.c  odp_classification.c  odp_cpu.c  odp_cpumask.c  odp_cpumask_task.c  odp_crypto.c  odp_event.c  odp_init.c  odp_packet.c  odp_packet_io.c  odp_pool.c  odp_queue.c  odp_rpc.c  odp_rwlock.c  odp_rwlock_recursive.c  odp_schedule.c  odp_schedule_if.c  odp_schedule_ordered.c  odp_shared_memory.c  odp_sleep.c  odp_spinlock.c  odp_spinlock_recursive.c  odp_system_info.c  odp_thread.c  odp_ticketlock.c  odp_time.c  odp_timer.c  odp_tm.c
platform/mppa/include/: odp_atomic_internal.h  odp_buffer_internal.h  odp_buffer_ring_internal.h  odp_classification_internal.h  odp_config_internal.h  odp_debug_internal.h  odp_internal.h  odp_macros_internal.h  odp_packet_internal.h  odp_packet_io_internal.h  odp_pool_internal.h  odp_queue_internal.h  odp_rx_internal.h  odp_spin_internal.h  odp_timer_types_internal.h  odp_trace.h  odp_tx_uc_internal.h
platform/mppa/include/odp/: atomic.h  config.h  cpu.h  packet.h  packet_io.h  version.h
platform/mppa/include/odp/api/: align.h  atomic.h  buffer.h  cpu.h  packet.h  packet_io.h  packet_io_stats.h  std_types.h  sync.h  thread.h  version.h
platform/mppa/include/odp/api/plat/: atomic_types.h  buffer_types.h  cpumask_types.h  event_types.h  init_types.h  packet_io_types.h  packet_types.h  pool_types.h  queue_types.h  schedule_types.h  spinlock_types.h  traffic_mngr_types.h
platform/mppa/include/odp/plat/: atomic_types.h  init_types.h  packet_io_types.h  thread_types.h
platform/mppa/include/odp/rpc/: api.h  bas.h  c2c.h  defines.h  eth.h  fp.h  helpers.h  pcie.h  rnd.h  rpc.h
platform/mppa/m4/: configure.m4  odp_openssl.m4
platform/mppa/os/mos/: timer.c
platform/mppa/os/nodeos/: timer.c
platform/mppa/pktio/: cluster.c  drop.c  eth.c  io_ops.c  ioddr.c  loop.c  magic.c  parse.c  pcie.c  pcie_print.c  rx_thread.c  tx_uc.c
platform/mppa/test/pktio/: pktio.c  pktio_run
platform/mppa/ucode_fw/: ucode_pcie_main.tcl  ucode_pcie_v2.c  ucode_pcie_v2.tcl
scripts/: git_hash.sh
test/: Makefile.inc
test/performance/: Makefile.am  odp_atomic.c  odp_crypto.c  odp_l2fwd.c  odp_l2fwd_run.sh  odp_pktio_perf.c  odp_scheduling.c
test/validation/: Makefile.am  Makefile.inc
test/validation/atomic/: Makefile.am  atomic.c
test/validation/barrier/: Makefile.am  barrier.c
test/validation/classification/: classification.h
test/validation/crypto/: crypto.c  odp_crypto_test_inp.c
test/validation/lock/: Makefile.am  lock.c
test/validation/packet/: packet.c
test/validation/pktio/: pktio.c  pktio.h
test/validation/pool/: pool.c
test/validation/queue/: queue.c
test/validation/scheduler/: scheduler.c
test/validation/time/: time.c
test/validation/timer/: timer.c
test/validation/traffic_mngr/: Makefile.am  traffic_mngr.c
valid/hudson/: build.rb
(+77 files in other folders)
